06-services/06-04-web/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ladesa-ro-web
          # image: "registry.ladesa.com.br/api:development"
          image: "traefik/whoami"
