06-services/06-04-web/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesa-ro-web-ingress
spec:
  rules:
    - host: luna.sisgha.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-web
                port:
                  name: web
    - host: dev.ladesa.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-web
                port:
                  name: web
